# venum-python-backend

./: .gitignore  Containerfile  LICENSE.md  README.md  justfile  pyproject.toml  usage.py
tests/: test_addition.py  test_encryption.py  test_glwe_dist.py  test_multiplication.py  test_radix_decomposition.py  test_rns.py  test_subtraction.py
venum/: crt.py  encryption.py  evaluation.py  glwe.py  key.py  logging.py  numeric.py  plaintext_encoding.py  rns.py
